Implementation of the sorting of recipes in relation to the words written in the searchbar

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                 </div>
             </div>
         </div>
-        <div class="row justify-content-between custom-line" id="container-item"></div>
+        <div class="row justify-content-between custom-line" id="container-item">
+            <div id="message">"Aucune recette ne correspond à votre critère... vous pouvez chercher « tarte aux pommes
+                », « poisson », etc."</div>
+        </div>
 
         <script src="js/index.js" type="module"></script>
 
