--- a/index.html
+++ b/index.html
@@ -37,35 +37,35 @@
         <div class="row tags" id="tag">
         </div>
         <div class="row dropdown">
-            <div class="col-md-1 dropdown_listbox ingredients" id="dropdownIngredients">
-                <div class="dropdown-listbox__name" id="listbox-nameIngredient"><span>Ingrédients</span>
+            <div class="col-md-1 dropdown_listbox ingredients" id="dropdown-ingredients">
+                <div class="dropdown-listbox__name" id="listboxName-ingredients"><span>Ingrédients</span>
                     <i class="fas fa-chevron-down"></i>
                 </div>
                 <div class="search-ingredients search-dropdown" id="search-ingredients">
                     <input type="search" id="input-ingredients" placeholder="Recherche un ingrédient">
-                    <i class="fas fa-chevron-up" id="chevron1"></i>
-                    <div id="listbox-ingredients"></div>
+                    <i class="fas fa-chevron-up" id="chevron-ingredients"></i>
+                    <div id="listbox-ingredients" class="listbox-dropdown"></div>
                 </div>
 
             </div>
-            <div class="col-md-1 dropdown_listbox appliance" id="dropdownAppliance">
-                <div class="dropdown-listbox__name" id="listbox-nameAppliance"><span>Appareil</span>
+            <div class="col-md-1 dropdown_listbox appliance" id="dropdown-appliances">
+                <div class="dropdown-listbox__name" id="listboxName-appliances"><span>Appareils</span>
                     <i class="fas fa-chevron-down"></i>
                 </div>
-                <div class="search-appliance search-dropdown" id="search-appliance">
-                    <input type="search" id="input-appliance" placeholder="Recherche un appareil">
-                    <i class="fas fa-chevron-up" id="chevron2"></i>
-                    <div id="listbox-appliances" class="listbox-appliances"></div>
+                <div class="search-appliances search-dropdown" id="search-appliances">
+                    <input type="search" id="input-appliances" placeholder="Recherche un appareil">
+                    <i class="fas fa-chevron-up" id="chevron-appliances"></i>
+                    <div id="listbox-appliances" class="listbox-appliances listbox-dropdown"></div>
                 </div>
             </div>
-            <div class="col-md-1  dropdown_listbox utensils" id="dropdownUtensils">
-                <div class="dropdown-listbox__name" id="listbox-nameUtensils"><span>ustensiles</span>
+            <div class="col-md-1  dropdown_listbox utensils" id="dropdown-utensils">
+                <div class="dropdown-listbox__name" id="listboxName-utensils"><span>ustensiles</span>
                     <i class="fas fa-chevron-down"></i>
                 </div>
                 <div class="search-utensils search-dropdown" id="search-utensils">
                     <input type="text" id="input-utensils" placeholder="Recherche un ustensile">
-                    <i class="fas fa-chevron-up" id="chevron3"></i>
-                    <div id="listbox-utensils"></div>
+                    <i class="fas fa-chevron-up" id="chevron-utensils"></i>
+                    <div id="listbox-utensils" class="listbox-dropdown"></div>
                 </div>
             </div>
         </div>
